documentation/website/src/include/versions/v1.0.0/doc-api/010-net.thevpc.nuts.md
---
id: pkg-net-thevpc-nuts
title: net.thevpc.nuts
order: 10
---

# Package net.thevpc.nuts

<a id="pkg-net-thevpc-nuts"></a>

Nuts : Network Updatable Things Service (universal package manager) is
a new Open Source Package Manager to help install packages
and libraries for runtime execution.


**nuts** stands for **Network Updatable Things Services** tool.
It's a **Package Manager** for (mainly) Java
and non Java world. It helps discovering, downloading, assembling and executing  remote artifacts (packages) in
a very handy way.




Each managed artifact  is also called a **nuts** which  is a __Network Updatable Thing Service__ .
**nuts** artifacts are  stored  into repositories. A  repository  may be local for  storing
local **nuts** or remote for accessing  remote artifacts (good examples  are  remote maven
repositories). It may also be a proxy repository so that remote artifacts are fetched and cached locally to save network
resources.




One manages a set of repositories called a  workspace. Managed **nuts**  (artifacts)  have descriptors
that depict dependencies between them. This dependency is seamlessly handled by  **nuts**  (tool) to
resolve and download on-need dependencies over the wire.




**nuts** is a swiss army knife tool as it acts like (and supports) maven build tool to have an abstract
view of the  artifacts dependency and like  __zypper__/__apt-get__/__pip__/__npm__  package manager tools
to install and uninstall artifacts allowing multiple versions of the very same artifact to  be installed.





Although **nuts** focuses on java artifacts, it still supports, by design, native and all non java artifacts.
Dependencies are fetched according to the current operating system type, distribution and hardware
architectures.





**nuts** works either as standalone application or as java library to enable dynamic and dependency
aware class loading and brings a rich toolset to provide a versatile portable command line tools such
as **nsh** (a bash like shell), **tomcat**, **derby** ... wrapper tools to make it easier providing
development , test and deployment reproducible environments.





With container concepts in mind, **nuts** is the perfect java application tool for __Docker__, __CoreOs__
and other container engines.




**COMMON VERBS:**


- install,uninstall,update : install/uninstall/update an artifact (using its fetched/deployed installer)
- deploy, undeploy         : manage artifacts on the local repositories
- fetch,push               : download, upload to remote repositories
- search                   : search for existing/installable artifacts
- exec                     : execute an artifact (tool)







Copyright [2020] [thevpc]
Licensed under the GNU LESSER GENERAL PUBLIC LICENSE Version 3 (the "License");
you may  not use this file except in compliance with the License. You may obtain
a copy of the License at https://www.gnu.org/licenses/lgpl-3.0.en.html
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
either express or implied. See the License for the specific language
governing permissions and limitations under the License.


====================================================================



## Classes Summary

| Class | Description |
| :--- | :--- |
| [Nuts](#cls-net-thevpc-nuts-Nuts) | Entry point for accessing and managing Nuts workspaces. |


---

<a id="cls-net-thevpc-nuts-Nuts"></a>

## Nuts

```java
public  final class Nuts
```

Entry point for accessing and managing Nuts workspaces.



The `Nuts` class provides static methods to open, run, or require a [NWorkspace](#cls-NWorkspace).
A workspace defines the execution context for all Nuts operations —
including configuration, repositories, installed packages, and runtime environment.







There are three primary ways to obtain a workspace, depending on the context:






- **[#openWorkspace(NWorkspaceOptions)](#m-openWorkspace)**

    Opens or creates a new workspace explicitly using the given options.
    This is the standard way for applications to initialize and control their
    own Nuts context and lifecycle.
    ```java
NWorkspace ws = Nuts.openWorkspace("--workspace=/path/to/ws");
```
- **[#require()](#m-require)**

    Ensures that a workspace exists and makes it the shared global workspace.
    If no workspace is currently available, an in-memory one will be created
    and shared automatically.
    


    This method is particularly useful for libraries or scripts that depend on Nuts
    (e.g., to parse TSON via NAF) but cannot assume a workspace has been explicitly opened yet.
    


    ```java
NWorkspace ws = Nuts.require();
NElements.of().parse(Tson.parse("...")); // uses shared workspace
```
- **`defaultWorkspace()`** (planned)

    Returns a guaranteed, non-shared workspace — suitable for temporary or
    isolated operations that need access to Nuts APIs but should not alter
    the global context.
    


    It can also be used to run code within a controlled workspace scope:
    


    ```java
Nuts.defaultWorkspace().callWith(() -> {
    NElement e = NElements.of().parse(Tson.parse("123")););
}
```





In summary:


```java
openWorkspace()   → explicit, user-managed workspace
require()         → global, shared workspace
defaultWorkspace()→ transient, isolated workspace (non-shared)
```

**Since:** 0.8.0

### Fields

| Modifier and Type | Field | Description |
| :--- | :--- | :--- |
| `private static final NVersion` | `version` | current Nuts version |
| `private static final NVersion` | `bootVersion` |  |
| `private static final NId` | `id` |  |
| `private static volatile NWorkspace` | `defaultInMemoryWorkspace` |  |

### Constructors

#### `Nuts()`

```java
private Nuts()
```

private constructor


### Method Summary

| Modifier and Type | Method | Description |
| :--- | :--- | :--- |
| `static NVersion` | [version()](#m-Nuts-version) | current nuts version. |
| `static NVersion` | [bootVersion()](#m-Nuts-bootVersion) | Returns the current Nuts boot version. |
| `static NId` | [apiId()](#m-Nuts-apiId) | Returns the Nuts API artifact identifier. |
| `static NWorkspace` | [require()](#m-Nuts-require) | Ensures that a shared workspace is available. |
| `static NWorkspace` | [defaultWorkspace()](#m-Nuts-defaultWorkspace) | Returns a guaranteed workspace instance for temporary or isolated use. |
| `static NWorkspace` | [require(String)](#m-Nuts-require) | Ensures that a shared workspace is available, using the provided boot options if a workspace must be created. |
| `static NWorkspace` | [openWorkspace(String)](#m-Nuts-openWorkspace) | Opens a new workspace using the provided Nuts boot arguments. |
| `static NWorkspace` | [openWorkspace(NBootArguments)](#m-Nuts-openWorkspace) | Opens a new workspace using the given NBootArguments. |
| `static NWorkspace` | [openWorkspace()](#m-Nuts-openWorkspace) | Opens a new workspace using default settings, with no boot arguments. |
| `static NWorkspace` | [openWorkspace(NWorkspaceOptions)](#m-Nuts-openWorkspace) | Opens a workspace using the given NWorkspaceOptions. |
| `static NWorkspace` | [runWorkspace(String)](#m-Nuts-runWorkspace) | **Opens** and **runs** a Nuts workspace with the provided boot arguments. |
| `static NWorkspace` | [runWorkspace(NWorkspaceOptions)](#m-Nuts-runWorkspace) | **Opens** and **runs** a Nuts workspace using the provided NWorkspaceOptions. |
| `static NWorkspace` | [runWorkspace(NBootArguments)](#m-Nuts-runWorkspace) | **Opens** and **runs** a Nuts workspace/application with the provided NBootArguments. |

### Method Details


---

<a id="m-Nuts-version"></a>

#### version

```java
public static NVersion version()
```

current nuts version. This is no more loaded from pom file. It's faster
and safer to get it as a code constant!

**Returns:**

current nuts version



---

<a id="m-Nuts-bootVersion"></a>

#### bootVersion

```java
public static NVersion bootVersion()
```

Returns the current Nuts boot version.

**Returns:**

current Nuts boot version



---

<a id="m-Nuts-apiId"></a>

#### apiId

```java
public static NId apiId()
```

Returns the Nuts API artifact identifier.

**Returns:**

current Nuts API artifact identifier



---

<a id="m-Nuts-require"></a>

#### require

```java
public static NWorkspace require() throws NBootUnsatisfiedRequirementsException
```

Ensures that a shared workspace is available.



If a workspace is already bound to the current thread, it will be returned.
Otherwise, an in-memory workspace will be opened and automatically shared
so that subsequent calls to [NWorkspace#get()](#cls-NWorkspace) will return it.







This method is intended for scripts and libraries that require access
to Nuts APIs (such as NAF or TSON parsing) before any workspace has been
explicitly opened.

**Returns:**

the existing or newly created shared workspace



---

<a id="m-Nuts-defaultWorkspace"></a>

#### defaultWorkspace

```java
public static NWorkspace defaultWorkspace() throws NBootUnsatisfiedRequirementsException
```

Returns a guaranteed workspace instance for temporary or isolated use.



This method ensures that a workspace exists so that Nuts APIs (like NAF or TSON parsing)
can be safely used, even if no workspace has been explicitly opened yet.







The workspace returned by this method is **not shared** with the
global context. Subsequent calls to [NWorkspace#get()](#cls-NWorkspace) will __not__
return this workspace unless [#require()](#m-require) is called explicitly.







This method can be used to temporarily execute code within a controlled workspace scope:




```java
Nuts.defaultWorkspace().callWith(() -> {
    NElement e = NElements.of().parse(Tson.parse("123"));
    // do something with the temporary workspace);
}
```




After the call completes, the workspace context falls back to its previous state.
Internally, the workspace is cached to avoid unnecessary recreation.

**Returns:**

a non-shared, cached workspace instance

**Throws:**

- `NBootUnsatisfiedRequirementsException` - if workspace creation fails



---

<a id="m-Nuts-require"></a>

#### require

```java
public static NWorkspace require(String options) throws NBootUnsatisfiedRequirementsException
```

Ensures that a shared workspace is available, using the provided boot options if a workspace
must be created.



If a workspace is already bound to the current thread, it will be returned as-is.
Otherwise, a new in-memory workspace will be opened with the specified `options` and
shared globally, so that subsequent calls to [NWorkspace#get()](#cls-NWorkspace) return it.







This method is useful for libraries, scripts, or utilities that require access
to Nuts APIs (such as NAF or TSON parsing) and want to influence the workspace
creation through boot arguments.




```java
// Example: library code needing a workspace with custom options
NWorkspace ws = Nuts.require("--workspace=/tmp/nuts", "--some-flag");
NElements.of().parse(Tson.parse("..."));
```




Internally, this method always adds "--reset-options" and "--in-memory" to ensure
a safe, minimal workspace if none exists.

**Parameters:**

- `options` - optional boot arguments to configure the workspace

**Returns:**

the existing or newly created shared workspace

**Throws:**

- `NBootUnsatisfiedRequirementsException` - if workspace creation fails



---

<a id="m-Nuts-openWorkspace"></a>

#### openWorkspace

```java
public static NWorkspace openWorkspace(String args) throws NBootUnsatisfiedRequirementsException
```

Opens a new workspace using the provided Nuts boot arguments.



This method is intended for applications that need to explicitly create
and control their workspace lifecycle. The workspace may be persistent
or in-memory depending on the arguments supplied.







Unlike [#require()](#m-require), this method does **not** automatically
share the workspace globally. Each call returns a new workspace instance
unless the boot arguments point to an existing workspace location.




```java
// Example: open a workspace with custom boot arguments
NWorkspace ws = Nuts.openWorkspace("--workspace=/path/to/ws", "--some-flag");
```

**Parameters:**

- `args` - the Nuts boot arguments to configure the workspace

**Returns:**

a new workspace instance corresponding to the provided arguments

**Throws:**

- `NBootUnsatisfiedRequirementsException` - if workspace creation fails



---

<a id="m-Nuts-openWorkspace"></a>

#### openWorkspace

```java
public static NWorkspace openWorkspace(NBootArguments args) throws NBootUnsatisfiedRequirementsException
```

Opens a new workspace using the given [NBootArguments](#cls-NBootArguments).



This method is intended for applications that need explicit control over
workspace creation and lifecycle. The returned workspace may be persistent
or in-memory depending on the boot arguments.







Unlike [#require()](#m-require), this workspace is not automatically shared globally.
Each call returns a new workspace instance unless the boot arguments
point to an existing workspace location.




```java
NBootArguments args = NBootArguments.of("--workspace=/tmp/nuts", "--some-flag");
NWorkspace ws = Nuts.openWorkspace(args);
```

**Parameters:**

- `args` - the boot arguments to configure the workspace; may be `null`

**Returns:**

a new workspace instance corresponding to the provided arguments

**Throws:**

- `NBootUnsatisfiedRequirementsException` - if workspace creation fails



---

<a id="m-Nuts-openWorkspace"></a>

#### openWorkspace

```java
public static NWorkspace openWorkspace()
```

Opens a new workspace using default settings, with no boot arguments.



This method provides a straightforward way for applications to obtain a workspace
without specifying any custom configuration. The workspace may be persistent or
in-memory depending on the default Nuts behavior.







Unlike [#require()](#m-require), this workspace is not automatically shared globally.
Each call returns a new workspace instance.




```java
NWorkspace ws = Nuts.openWorkspace();
```

**Returns:**

a new workspace instance using default options



---

<a id="m-Nuts-openWorkspace"></a>

#### openWorkspace

```java
public static NWorkspace openWorkspace(NWorkspaceOptions options)
```

Opens a workspace using the given [NWorkspaceOptions](#cls-NWorkspaceOptions).



[NWorkspaceOptions](#cls-NWorkspaceOptions) provides a high-level, structured way to configure
workspace properties such as repository locations, output formatting, isolation level,
launcher settings, and other runtime behaviors.







This differs from [#openWorkspace(NBootArguments)](#m-openWorkspace) which is a lower-level API
where you pass raw boot arguments (string arrays) directly. Use [NBootArguments](#cls-NBootArguments)
when you already have command-line-like arguments, and [NWorkspaceOptions](#cls-NWorkspaceOptions)
when you want structured programmatic configuration.







The returned workspace is a new instance. Unlike [#require()](#m-require),
it is not automatically shared globally.




```java
NWorkspaceOptions options = MyWorkspaceOptions.builder()
                                               .setName("myWorkspace")
                                               .setHomeLocation("/tmp/nuts")
                                               .build();
NWorkspace ws = Nuts.openWorkspace(options);
```

**Parameters:**

- `options` - structured workspace options, may be null for defaults

**Returns:**

a new workspace instance configured using the given options



---

<a id="m-Nuts-runWorkspace"></a>

#### runWorkspace

```java
public static NWorkspace runWorkspace(String args) throws NExecutionException
```

**Opens** and **runs** a Nuts workspace with the
provided boot arguments.



This method will initialize and execute the workspace based on the given arguments.
It **does not** call `System#exit(int)`.
If `--help` or `--version` are detected in the arguments,
the workspace will not be opened and a `null` session is returned
after displaying the corresponding help or version information on standard output.

**Parameters:**

- `args` - the boot arguments for the workspace

**Returns:**

the workspace session after execution, or <code>null</code> if help/version was displayed

**Throws:**

- `NExecutionException` - if execution fails



---

<a id="m-Nuts-runWorkspace"></a>

#### runWorkspace

```java
public static NWorkspace runWorkspace(NWorkspaceOptions options)
```

**Opens** and **runs** a Nuts workspace using the
provided [NWorkspaceOptions](#cls-NWorkspaceOptions).



This method will initialize and execute the workspace based on the given options.
It **does not** call `System#exit(int)`.

**Parameters:**

- `options` - the workspace options to configure and run the workspace;
               if <code>null</code>, default boot options are used

**Returns:**

the workspace session after execution



---

<a id="m-Nuts-runWorkspace"></a>

#### runWorkspace

```java
public static NWorkspace runWorkspace(NBootArguments args) throws NExecutionException
```

**Opens** and **runs** a Nuts workspace/application
with the provided [NBootArguments](#cls-NBootArguments).



This method **does not** call `System#exit(int)`.
If `--help` or `--version` are detected in the arguments,
the workspace will **not** be opened. In such cases, the method
will display help or version information on the standard output and
return `null`.

**Parameters:**

- `args` - the boot arguments to configure and run the workspace

**Returns:**

the workspace session if executed normally, or <code>null</code> if
        help/version output was triggered

**Throws:**

- `NExecutionException` - if an error occurs while running the workspace


